gitops/stages/040-governed-models-as-a-service/base/governance/base/authorino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorino-authorino-authorization
  namespace: kuadrant-system
  labels:
    app.kubernetes.io/name: authorino
    app.kubernetes.io/component: authorization
  annotations:
    argocd.argoproj.io/sync-wave: "9"
    service.beta.openshift.io/serving-cert-secret-name: authorino-server-cert
spec:
  ports:
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
    - name: http
      port: 5001
      protocol: TCP
      targetPort: 5001
  selector:
    authorino-resource: authorino
  type: ClusterIP
